--- a/inferential_statistics_1a-Q6.25.ipynb
+++ b/inferential_statistics_1a-Q6.25.ipynb
@@ -784,16 +784,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.575155828796599"
+       "0.19355593334131074"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
     "seed(47)\n",
     "# draw five samples here\n",
     "np.random.seed(47)\n",
-    "sample = np.random.rand(5)\n",
+    "sample = norm.rvs(size=5, loc=0, scale=1)\n",
     "sample_mean = np.mean(sample)\n",
     "sample_mean\n"
    ]
@@ -818,7 +818,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__0.575155828796599"
+    "__A:__\n",
+    "4.1519905242338595"
    ]
   },
   {
@@ -846,22 +847,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3045536451712141"
+       "0.9606195639478641"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sample_std = np.sqrt(np.sum((sample - sample_mean)**2)/len(sample))\n",
+    "sample_std = np.std(sample)\n",
     "sample_std"
    ]
   },
@@ -883,16 +884,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.34050132669909267"
+       "1.0740053227518152"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1859,16 +1860,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(172.0362960678964, 0.7097408619650849)"
+       "(171.9413590233136, 0.6731004146360339)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1878,8 +1879,8 @@
     "n=365\n",
     "for i in range(1,n):\n",
     "    daily_sample2 = townsfolk_sampler(50)\n",
-    "    mean = np.mean(daily_sample2)\n",
-    "    mean_samples2.append(mean)\n",
+    "    mean2 = np.mean(daily_sample2)\n",
+    "    mean_samples2.append(mean2)\n",
     "mean_samples2\n",
     "\n",
     "mean2 = np.mean(mean_samples2)\n",
@@ -1990,16 +1991,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9999999999986612"
+       "0.8413447460685429"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2012,7 +2013,7 @@
     "# The P-Value is < .00001\n",
     "# Hence the probability of selecting one person at random and their height being < 177 cm is 0.9999\n",
     "\n",
-    "stats.norm.cdf(177, loc = mean2, scale = std2)"
+    "stats.norm.cdf(177, loc = 172, scale = 5)"
    ]
   },
   {
@@ -2031,22 +2032,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "1.0717590259723409e-08"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1 - (stats.norm.cdf(200, loc = mean2, scale = std2))"
+    "1 - (stats.norm.cdf(200, loc = 172, scale = 5))"
    ]
   },
   {
@@ -2087,16 +2088,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(172.7815108576788, 0.7107177941026096)"
+       "(172.78, 0.67)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2108,21 +2109,21 @@
     "sample3 = townsfolk_sampler(n3)\n",
     "mean_sample3 = np.mean(sample3)\n",
     "std_sample3 = np.std(mean_samples2,ddof = 1)\n",
-    "mean_sample3 , std_sample3"
+    "round(mean_sample3,2) , round(std_sample3,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1969973017760347"
+       "0.19"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2133,26 +2134,26 @@
     "z_critical = norm.ppf(0.975)\n",
     "\n",
     "MOE3 = z_critical*std_sample3/np.sqrt(n3)\n",
-    "MOE3"
+    "round(MOE3,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "With 95% Confidence Level, we can estimate the Mean of the sampe to be between: 172.58451355590276 172.97850815945483\n"
+      "With 95% Confidence Level, we can estimate the Mean of the sampe to be between: 172.59 172.97\n"
      ]
     }
    ],
    "source": [
     "# The confidence interval of the mean is given by:\n",
     "\n",
-    "print('With 95% Confidence Level, we can estimate the Mean of the sampe to be between:', mean_sample3-MOE3,mean_sample3+MOE3)"
+    "print('With 95% Confidence Level, we can estimate the Mean of the sampe to be between:', round(mean_sample3-MOE3,2),round(mean_sample3+MOE3,2))"
    ]
   },
   {
@@ -2218,19 +2219,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "With 95% Confidence Level, we can estimate the Mean of the sampe to be between: 172.57952709571532 172.98349461964227\n"
+      "With 95% Confidence Level, we can estimate the Mean of the sampe to be between: 172.58 172.98\n"
      ]
     }
    ],
    "source": [
-    "print('With 95% Confidence Level, we can estimate the Mean of the sampe to be between:', mean_sample3-MOE3_t,mean_sample3+MOE3_t)"
+    "print('With 95% Confidence Level, we can estimate the Mean of the sampe to be between:', round(mean_sample3-MOE3_t,2),round(mean_sample3+MOE3_t,2))"
    ]
   },
   {
@@ -2275,7 +2276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
