--- a/inferential_statistics_1b-Q6.25.ipynb
+++ b/inferential_statistics_1b-Q6.25.ipynb
@@ -555,8 +555,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__ A z-test is a statistical test used to determine whether two population means are different when the variances are known and the sample size is large.\n",
-    "While the T-test used to determine if there is a significant difference between the means of two groups and also used as a hypothesis testing tool, which allows testing of an assumption applicable to a population."
+    "__A:__ There is no such equivalent function for the z-test. The z-test is applicable when we know the population parameters, so we would not be performing it using a sample."
    ]
   },
   {
@@ -618,7 +617,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
