--- a/inferential_statistics_2-Q.ipynb
+++ b/inferential_statistics_2-Q.ipynb
@@ -721,7 +721,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__"
+    "__A:__\n",
+    "Hypothesis: A = B\n",
+    "Alt Hyp: B>A\n",
+    "alpha = 0.5\n",
+    "95% confidence interval"
    ]
   },
   {
