--- a/inferential_statistics_2-Q.ipynb
+++ b/inferential_statistics_2-Q.ipynb
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,12 +425,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 199,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-199-d08d41f4cd7e>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-199-d08d41f4cd7e>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    _A_  This shows that the confidence interval could contain the possibility that difference in std dev is zero.\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "# This shows that the confidence interval could contain the possibility that difference in std dev is zero. \n",
-    "# Hence the null hypothesis is true"
+    "_A_  This shows that the confidence interval could contain the possibility that difference in std dev is zero. \n",
+    "Hence the null hypothesis is true"
    ]
   },
   {
@@ -529,7 +538,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Hypothesis is the mean of the insurance and no insurance patients is the same.\n",
+    "# Hypothesis is the mean of the insurance and no insurance patients is the same.\n",
     "# Alternative is that they are not the same\n",
     "# using alpha = 0.05 and 95% confidence interval.\n",
     "\n"
