--- a/Mini_Project_Naive_Bayes.ipynb
+++ b/Mini_Project_Naive_Bayes.ipynb
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1452,6 +1452,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alpha: 0.1  min df: 1e-05  score: -995.083226364421\n",
+      "alpha: 1  min df: 1e-05  score: -746.1706522720942\n",
+      "alpha: 5  min df: 1e-05  score: -1255.3681917330107\n",
+      "alpha: 10  min df: 1e-05  score: -1406.7313863985037\n",
+      "alpha: 50  min df: 1e-05  score: -1363.1187285194226\n",
+      "alpha: 0.1  min df: 0.0001  score: -993.1049851749976\n",
+      "alpha: 1  min df: 0.0001  score: -647.1570418772493\n",
+      "alpha: 5  min df: 0.0001  score: -999.4364152216174\n",
+      "alpha: 10  min df: 0.0001  score: -1215.6357774337027\n",
+      "alpha: 50  min df: 0.0001  score: -1310.5351439228932\n",
+      "alpha: 0.1  min df: 0.0005  score: -861.1225491956666\n",
+      "alpha: 1  min df: 0.0005  score: -607.1790335184608\n",
+      "alpha: 5  min df: 0.0005  score: -626.8333664109418\n",
+      "alpha: 10  min df: 0.0005  score: -793.1498744155922\n",
+      "alpha: 50  min df: 0.0005  score: -1132.9522623189177\n",
+      "alpha: 0.1  min df: 0.0008  score: -789.3449855897893\n",
+      "alpha: 1  min df: 0.0008  score: -607.7274394170416\n",
+      "alpha: 5  min df: 0.0008  score: -579.0724922079842\n",
+      "alpha: 10  min df: 0.0008  score: -679.0136761100948\n",
+      "alpha: 50  min df: 0.0008  score: -1038.258246669963\n",
+      "alpha: 0.1  min df: 0.001  score: -754.9951465473629\n",
+      "alpha: 1  min df: 0.001  score: -603.8838117762659\n",
+      "alpha: 5  min df: 0.001  score: -569.304579194216\n",
+      "alpha: 10  min df: 0.001  score: -643.8398163748379\n",
+      "alpha: 50  min df: 0.001  score: -993.0807002386434\n",
+      "alpha: 0.1  min df: 0.003  score: -610.4296494491402\n",
+      "alpha: 1  min df: 0.003  score: -588.5701421533304\n",
+      "alpha: 5  min df: 0.003  score: -570.9991742367349\n",
+      "alpha: 10  min df: 0.003  score: -578.6426087292635\n",
+      "alpha: 50  min df: 0.003  score: -764.5459151904086\n",
+      "alpha: 0.1  min df: 0.005  score: -603.8389146750266\n",
+      "alpha: 1  min df: 0.005  score: -596.3614354879511\n",
+      "alpha: 5  min df: 0.005  score: -587.1467595164255\n",
+      "alpha: 10  min df: 0.005  score: -587.7371291666341\n",
+      "alpha: 50  min df: 0.005  score: -685.0084599668543\n",
+      "\n",
+      " best alpha: 5 best min df: 0.001  max score -569.304579194216\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "\n",
+    "#the grid of parameters to search over\n",
+    "alphas = [.1, 1, 5, 10, 50]\n",
+    "#min_dfs= [1,5,10,50,60,70,100] ## best 50\n",
+    "min_dfs=[0.00001,0.0001,0.0005,0.0008,0.001,0.003,0.005]#best 0.001\n",
+    "best_min_df = 0.001 # YOUR TURN: put your value of min_df here.\n",
+    "\n",
+    "#Find the best value for alpha and min_df, and the best classifier\n",
+    "best_alpha = None\n",
+    "maxscore=-np.inf\n",
+    "for mindf in min_dfs:\n",
+    "    for alpha in alphas:        \n",
+    "        vectorizer = CountVectorizer(min_df=mindf)       \n",
+    "        Xthis, ythis = make_xy(critics, vectorizer)\n",
+    "        Xtrainthis = Xthis[mask]\n",
+    "        ytrainthis = ythis[mask]\n",
+    "        clf = MultinomialNB(alpha=alpha)\n",
+    "        score = cv_score(clf,Xtrainthis,ytrainthis,log_likelihood)\n",
+    "        print('alpha:',alpha,' min df:',mindf,' score:',score)\n",
+    "        if score>maxscore:\n",
+    "            maxscore=score\n",
+    "            best_alpha=alpha\n",
+    "            best_min_df=mindf\n",
+    "print('\\n','best alpha:',best_alpha,'best min df:',best_min_df,' max score',maxscore)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 252,
    "metadata": {},
    "outputs": [
@@ -1582,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
@@ -1661,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -1696,9 +1774,11 @@
    "source": [
     "words = np.array(vectorizer.get_feature_names())\n",
     "\n",
-    "x = np.eye(xtest.shape[1])\n",
+    "x = np.eye(xtest.shape[1]) # Return a 2-D array with ones on the diagonal and zeros elsewhere. Creates a matrix\n",
+    "# of the number specified, adding k= 1 or -1 creates a diagonal above or below with 1's while the main daigonal\n",
+    "# remains zero\n",
     "probs = clf.predict_log_proba(x)[:, 0]\n",
-    "ind = np.argsort(probs)\n",
+    "ind = np.argsort(probs) #sorts the list of probabilities and returns their indices\n",
     "\n",
     "good_words = words[ind[:10]]\n",
     "bad_words = words[ind[-10:]]\n",
@@ -1716,24 +1796,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 297,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<10892x2608 sparse matrix of type '<class 'numpy.longlong'>'\n",
-       "\twith 152702 stored elements in Compressed Sparse Column format>"
-      ]
-     },
-     "execution_count": 297,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "xtest"
+    "The model looks at words in each row and computes the probability of having a 'fresh' predictor giving the word and the model."
    ]
   },
   {
@@ -1766,11 +1832,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 321,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mis-predicted Rotten quotes\n",
+      "---------------------------\n",
+      "Directed with composure, but no great fervour, the film's conspicuously uninterested in American football, and much concerned with testing the limits and the resilience of the American dream.\n",
+      "\n",
+      "It survives today only as an unusually pure example of a typical 50s art-film strategy: the attempt to make the most modern and most popular of art forms acceptable to the intelligentsia by forcing it into an arcane, antique mold.\n",
+      "\n",
+      "The plot of The Glimmer Man involves not only the Family Man but Our Evil Secret Government, the Russian Mafia and Rich Powerful Politicians -- the three stooges of action cinema in the '90s.\n",
+      "\n",
+      "All of the special effects in the world, and all of the great makeup, and all of the great Muppet creatures can't save a movie that has no clear idea of its own mission and no joy in its own accomplishment.\n",
+      "\n",
+      "There is scarcely a moment in the movie when the story works as fiction; I was always aware of the casting, of the mood-setting devices, of the stylistic borrowings from Hitchcock.\n",
+      "\n",
+      "Mis-predicted Fresh quotes\n",
+      "--------------------------\n",
+      "The scenes move with such relentless energy and smashing special-effects extravagance that Die Hard turns out to be everything action-genre fans, and Bruce Willis's relieved investors, might have hoped for.\n",
+      "\n",
+      "Things might be bad, the movie suggests, but they're not so bad you can't laugh.\n",
+      "\n",
+      "This cautionary fable (Be True to Your Ghoulish Self) may be a little too twisted for little kids but anyone 8 or older will spot the friendly glint behind jack's empty eye sockets.\n",
+      "\n",
+      "This tough-to-peg whodunit keeps you going for two hours, despite a few James Bond-ish (or Jane Bond-ish) turns that play less preposterously than you might assume were they to be divulged.\n",
+      "\n",
+      "Though it's a good half hour too long, this overblown 1993 spin-off of the 60s TV show otherwise adds up to a pretty good suspense thriller.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "x, y = make_xy(critics, vectorizer)\n",
     "\n",
@@ -1812,13 +1907,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 345,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0497844, 0.9502156]])"
+      ]
+     },
+     "execution_count": 345,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your turn"
+    "#your turn\n",
+    "line = ['This movie is not remarkable, touching, or superb in any way']\n",
+    "\n",
+    "string_review = vectorizer.transform(line)\n",
+    "\n",
+    "clf.predict_proba(string_review)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9502155991706995"
+      ]
+     },
+     "execution_count": 333,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence_ ='This movie is not remarkable, touching, or superb in any way'\n",
+    "sentence = [sentence_]\n",
+    "xs = vectorizer.transform(sentence)\n",
+    "clf.predict_proba(xs)[0,1]"
    ]
   },
   {
